Fixes layout issue due to scroll bar pushing everything to the left, also fixes issue where in Collections page, order of Download and Delete anchors would be randomly listed.

--- a/edu.illinois.ncsa.mmdb.web/war/mmdb.css
+++ b/edu.illinois.ncsa.mmdb.web/war/mmdb.css
@@ -1,3 +1,7 @@
+html { 
+	overflow-y: scroll; 
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
@@ -5,6 +9,7 @@ body {
 	padding: 0px;
 	text-align: center;
 	background-color: white;
+	
 }
 
 .mainMenu, .mainContainer, .bottomMenu {
